--- a/src/app/component/shopify/shopify.component.html
+++ b/src/app/component/shopify/shopify.component.html
@@ -1,1 +1,135 @@
-<p>shopify works!</p>
+<main>
+  <div class="wrapper-background">
+    <img src="assets/img/download.svg" alt="Background" />
+  </div>
+  <section class="header">
+    <div class="wrapper-logo">
+      <a href="#" class="logo">
+        <img src="assets/img/logo/pngwing.com.png" alt="Shopify Logo" />
+      </a>
+    </div>
+  </section>
+  <section class="hero">
+    <div class="container">
+      <h1>Sell online with Shopify</h1>
+      <h2>Trusted by millions of businesses worldwide</h2>
+      <form action="" class="hero-form">
+        <input
+          type="text"
+          class="hero-email"
+          placeholder="Enter your email address"
+        />
+        <button class="hero-btn" type="submit">Start free trial</button>
+        <p class="form-descr">
+          Try Shopify free for 14 days, no credit card required. By entering
+          your email, you agree to receive marketing emails from Shopify.
+        </p>
+      </form>
+      <img
+        src="https://cdn.shopify.com/shopifycloud/brochure/assets/landers/short-lander/free-trial/storefront-illustration@mobile-cd49a37e1e5e153e43ca57891bd3f327ff19f1fe139517ad4fbcf2d83388ae23.png"
+        alt="Computer imagine"
+      />
+    </div>
+  </section>
+  <section class="services">
+    <div class="container">
+      <ul class="services-list">
+        <li class="services-item">
+          <img src="" alt="icon" />
+          <h3 class="services-subtitle">Customizable templates</h3>
+          <p class="services-descr">
+            Free website designs to launch your store quickly and easily.
+          </p>
+        </li>
+        <li class="services-item">
+          <img src="" alt="icon" />
+          <h3 class="services-subtitle">All in one</h3>
+          <p class="services-descr">
+            Shopify takes care of everything from marketing and payments to
+            secure transactions and shipping.
+          </p>
+        </li>
+        <li class="services-item">
+          <img src="" alt="icon" />
+          <h3 class="services-subtitle">A safe and efficient platform</h3>
+          <p class="services-descr">
+            More than a million users trust Shopify to manage their online
+            stores.
+          </p>
+        </li>
+      </ul>
+    </div>
+  </section>
+  <section class="cooperation">
+    <div class="content">
+      <div class="wrapper-cooperation-logo">
+        <img
+          src="assets/img/cooperationLogo/cee-cees-closet-large-72b3934735d6d9c80ab6e49bb691f0a499d3796886616ef7730d992b64348ca6.png"
+          alt="SEE SEES"
+        />
+      </div>
+      <div class="wrapper-cooperation-logo">
+        <img
+          src="assets/img/cooperationLogo/nalata-nalata-large-3add77fd7a7030bfc5160c8c9e109263e30e706ece8872324f05ca87b9f9c058.png"
+          alt="NALATA"
+        />
+      </div>
+      <div class="wrapper-cooperation-logo">
+        <img
+          src="assets/img/cooperationLogo/kirrin-finch-large-5eac21f691ca33865f5379e3c929f0455f2c60eac456acde2ecb5e7e8cf0b6b6.png"
+          alt="KIRRIN"
+        />
+      </div>
+      <div class="wrapper-cooperation-logo">
+        <img
+          src="assets/img/cooperationLogo/tokyo-bike-large-e665c13f78f1ff857c63acfe106003071ab5789a56d98e06036cd552a11afb7c.png"
+          alt="TOKYOBIKE"
+        />
+      </div>
+      <div class="wrapper-cooperation-logo">
+        <img
+          src="assets/img/cooperationLogo/meso-goods-large-3c91df696ae24868cf3158a03b219ad3d59e1cc79cd6bcfd5e00e4caf24f1590.png"
+          alt="MESO"
+        />
+      </div>
+      <div class="wrapper-cooperation-logo">
+        <img
+          src="assets/img/cooperationLogo/coco-and-breezy-large-e7ffaba59d09afb9ecb7e12463cb72920817438c900b887209608c94fc9c9ec0.png"
+          alt="COCO AND BREEZY"
+        />
+      </div>
+      <div class="wrapper-cooperation-logo">
+        <img
+          src="assets/img/cooperationLogo/brooklyn-museum-large-14623fdd62a9c87241ee2d84b3e15feea4b30061839d0e20d1bd38a1d847286b.png"
+          alt="BROOKLYN Museum"
+        />
+      </div>
+      <div class="wrapper-cooperation-logo">
+        <img
+          src="assets/img/cooperationLogo/adore-me-large-7a7f06a74d88d7a5e019800da52ccc54334c96159f3761173c0c5cd37e03e38d.png"
+          alt="Adore Me"
+        />
+      </div>
+    </div>
+  </section>
+  <section class="get-stated">
+    <div class="container">
+      <h3 class="get-started-quotes">
+        “Shopify is better than any other platform we’ve played with, and we’ve
+        played with them all.”
+      </h3>
+      <h4 class="quotes-owner">JONATHON BAYME, CEO OF THEORY11</h4>
+      <button class="get-started-btn">Start free trial</button>
+    </div>
+  </section>
+</main>
+<footer class="footer">
+  <div class="container">
+    <div class="footer-item">
+      <a href="#" class="footer-link">Terms of Service </a>
+    </div>
+    <div class="footer-item">
+      <a href="#" class="footer-link">Privacy Policy</a>
+    </div>
+  </div>
+</footer>
