--- a/src/app/component/shopify/shopify.component.html
+++ b/src/app/component/shopify/shopify.component.html
@@ -1,18 +1,22 @@
-<main>
+<main class="main">
   <div class="wrapper-background">
     <img src="assets/img/download.svg" alt="Background" />
   </div>
   <section class="header">
     <div class="wrapper-logo">
-      <a href="#" class="logo">
-        <img src="assets/img/logo/pngwing.com.png" alt="Shopify Logo" />
+      <a href="#" class="logo-link">
+        <img
+          class="logo"
+          src="assets/img/logo/pngwing.com.png"
+          alt="Shopify Logo"
+        />
       </a>
     </div>
   </section>
   <section class="hero">
     <div class="container">
-      <h1>Sell online with Shopify</h1>
-      <h2>Trusted by millions of businesses worldwide</h2>
+      <h1 class="hero-title">Sell online with Shopify</h1>
+      <h2 class="hero-descr">Trusted by millions of businesses worldwide</h2>
       <form action="" class="hero-form">
         <input
           type="text"
@@ -20,12 +24,13 @@
           placeholder="Enter your email address"
         />
         <button class="hero-btn" type="submit">Start free trial</button>
-        <p class="form-descr">
-          Try Shopify free for 14 days, no credit card required. By entering
-          your email, you agree to receive marketing emails from Shopify.
-        </p>
       </form>
+      <p class="form-descr">
+        Try Shopify free for 14 days, no credit card required. By entering your
+        email, you agree to receive marketing emails from Shopify.
+      </p>
       <img
+        class="hero-image"
         src="https://cdn.shopify.com/shopifycloud/brochure/assets/landers/short-lander/free-trial/storefront-illustration@mobile-cd49a37e1e5e153e43ca57891bd3f327ff19f1fe139517ad4fbcf2d83388ae23.png"
         alt="Computer imagine"
       />
