Icon + responsive page

--- a/src/app/component/shopify/shopify.component.html
+++ b/src/app/component/shopify/shopify.component.html
@@ -1,7 +1,7 @@
 <main class="main">
-  <div class="wrapper-background">
+  <!-- <div class="wrapper-background">
     <img src="assets/img/download.svg" alt="Background" />
-  </div>
+  </div> -->
   <section class="header">
     <div class="wrapper-logo">
       <a href="#" class="logo-link">
@@ -14,7 +14,7 @@
     </div>
   </section>
   <section class="hero">
-    <div class="container">
+    <div class="hero-container">
       <h1 class="hero-title">Sell online with Shopify</h1>
       <h2 class="hero-descr">Trusted by millions of businesses worldwide</h2>
       <form action="" class="hero-form">
@@ -29,25 +29,27 @@
         Try Shopify free for 14 days, no credit card required. By entering your
         email, you agree to receive marketing emails from Shopify.
       </p>
-      <img
-        class="hero-image"
-        src="https://cdn.shopify.com/shopifycloud/brochure/assets/landers/short-lander/free-trial/storefront-illustration@mobile-cd49a37e1e5e153e43ca57891bd3f327ff19f1fe139517ad4fbcf2d83388ae23.png"
-        alt="Computer imagine"
-      />
+      <div class="wrapper-hero-image">
+        <img
+          class="hero-image"
+          src="https://cdn.shopify.com/shopifycloud/brochure/assets/landers/short-lander/free-trial/storefront-illustration@mobile-cd49a37e1e5e153e43ca57891bd3f327ff19f1fe139517ad4fbcf2d83388ae23.png"
+          alt="Computer imagine"
+        />
+      </div>
     </div>
   </section>
   <section class="services">
     <div class="container">
       <ul class="services-list">
         <li class="services-item">
-          <img src="" alt="icon" />
+          <img src="assets/icon/service/device.png" alt="icon device" />
           <h3 class="services-subtitle">Customizable templates</h3>
           <p class="services-descr">
             Free website designs to launch your store quickly and easily.
           </p>
         </li>
         <li class="services-item">
-          <img src="" alt="icon" />
+          <img src="assets/icon/service/money.png" alt="icon money" />
           <h3 class="services-subtitle">All in one</h3>
           <p class="services-descr">
             Shopify takes care of everything from marketing and payments to
@@ -55,7 +57,7 @@
           </p>
         </li>
         <li class="services-item">
-          <img src="" alt="icon" />
+          <img src="assets/icon/service/group.png" alt="icon group" />
           <h3 class="services-subtitle">A safe and efficient platform</h3>
           <p class="services-descr">
             More than a million users trust Shopify to manage their online
@@ -117,7 +119,7 @@
       </div>
     </div>
   </section>
-  <section class="get-stated">
+  <section class="get-started">
     <div class="container">
       <h3 class="get-started-quotes">
         “Shopify is better than any other platform we’ve played with, and we’ve
@@ -129,7 +131,7 @@
   </section>
 </main>
 <footer class="footer">
-  <div class="container">
+  <div class="wrapper">
     <div class="footer-item">
       <a href="#" class="footer-link">Terms of Service </a>
     </div>
