--- a/src/app/component/shopify/shopify.component.scss
+++ b/src/app/component/shopify/shopify.component.scss
@@ -1,18 +1,21 @@
 .main {
-  .wrapper-background {
-    width: 100%;
-    position: absolute;
-    top: 0;
-    z-index: -1;
-    img {
-      width: inherit;
-      min-height: 900px;
-      object-fit: cover;
-      object-position: center;
-    }
-  }
+  // .wrapper-background {
+  //   display: none;
+  //   width: 100%;
+  //   position: absolute;
+  //   top: 0;
+  //   z-index: -1;
+  //   img {
+  //     width: inherit;
+  //     height: 700px;
+  //     object-fit: cover;
+  //     object-position: center;
+  //   }
+  // }
   .header {
-    padding: 45px 20px;
+    position: absolute;
+    width: 100%;
+    top: 40px;
     .wrapper-logo {
       display: flex;
       flex-direction: column;
@@ -25,30 +28,42 @@
     }
   }
   .hero {
+    height: fit-content;
+    background-image: url(/assets/img/download.svg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
     color: white;
-    padding: 0 20px;
-    .container {
+    padding: 120px 30px 0;
+
+    .hero-container {
       text-align: center;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
       .hero-title {
         font-size: 28px;
+        margin-bottom: 0px;
       }
       .hero-descr {
         font-size: 22px;
         font-weight: 500;
       }
       .hero-form {
+        width: 100%;
         justify-content: center;
         display: flex;
         flex-direction: column;
         align-items: center;
-        padding: 15px 4px 0;
+        padding: 15px 4px;
 
         .hero-email {
           width: 100%;
+          max-width: 500px;
           box-sizing: border-box;
           height: 52px;
           border-radius: 4px;
-          margin: 0 0 15px;
+          margin: 0 0 5px 0;
           border: 1px solid black;
           font-size: 16px;
           padding: 8px 10px;
@@ -59,22 +74,188 @@
           box-sizing: border-box;
           height: 52px;
           border-radius: 4px;
-          margin: 0 0 15px;
-          background: black;
-          border: 1px solid black;
+          background: #212326;
+          border: 1px solid #212326;
           color: white;
           font-size: 18px;
+          &:hover {
+            background-color: #121314;
+            transition: 0.4s;
+          }
         }
       }
       .form-descr {
         padding: 5px 15px;
-        font-size: 12px;
+        font-size: 11px;
         font-weight: 300;
       }
-      .hero-image {
-        width: 280px;
+      .wrapper-hero-image {
         max-width: 310px;
+        margin-top: 60px;
+        .hero-image {
+          max-width: 100%;
+        }
       }
     }
   }
+  .services {
+    padding: 0 30px 80px;
+    .container {
+      .services-list {
+        display: flex;
+        flex-direction: column;
+        list-style: none;
+        padding: 0;
+        .services-item {
+          margin-top: 45px;
+          img {
+            width: 65px;
+            color: #008060;
+          }
+          .services-subtitle {
+            font-size: 16px;
+          }
+          .services-descr {
+            color: #6b7177;
+            font-size: 15px;
+            font-weight: 400;
+            line-height: 26px;
+          }
+        }
+      }
+    }
+  }
+  .cooperation {
+    padding: 0 20px;
+
+    .content {
+      display: flex;
+      flex-wrap: wrap;
+      flex-direction: row;
+      justify-content: space-around;
+      height: fit-content;
+      border-top: 1px solid #6b7177;
+      border-bottom: 1px solid #6b7177;
+      padding: 30px 0;
+      .wrapper-cooperation-logo {
+        width: 115px;
+        margin: 7px 10px;
+        img {
+          width: 100%;
+        }
+      }
+    }
+  }
+  .get-started {
+    padding: 60px 30px 0;
+    .container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+      .get-started-quotes {
+        font-weight: 300;
+      }
+      .quotes-owner {
+        font-size: 13px;
+        margin: 0;
+        padding: 10px 20px 60px;
+        color: #42474c;
+      }
+      .get-started-btn {
+        width: 163px;
+        height: 52px;
+        color: white;
+        background-color: #008060;
+        border-radius: 4px;
+        border: none;
+        font-size: 18px;
+        &:hover {
+          transition: 0.4s;
+          background-color: #02634a;
+          box-shadow: 0 0 6px 6px #d4e9e442;
+        }
+      }
+    }
+  }
+}
+.footer {
+  padding: 80px 30px 15px;
+  .wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    .footer-item {
+      padding: 8px;
+
+      .footer-link {
+        text-decoration: none;
+        color: #008060;
+      }
+    }
+  }
+}
+@media (min-width: 490px) {
+  .hero-form {
+    flex-direction: row !important;
+  }
+  .hero-email {
+    width: 70% !important;
+    margin: 0 8px 8px !important;
+  }
+  .hero-btn {
+    width: 145px !important;
+    margin: 0 8px 8px !important;
+  }
+}
+@media (min-width: 768px) {
+  .logo {
+    width: 150px !important;
+  }
+  .hero {
+    padding: 150px 140px 70px !important;
+  }
+  .hero-title {
+    font-size: 35px !important;
+  }
+  .hero-descr {
+    font-size: 28px !important;
+  }
+  .hero-form {
+    padding: 10px 100px;
+    .hero-email {
+    }
+    .hero-btn {
+    }
+  }
+  .form-descr {
+    font-size: 14px !important;
+  }
+  .services {
+    padding: 0 100px 80px !important;
+    .services-list {
+      flex-direction: row !important;
+      flex-wrap: wrap !important;
+      margin: 0 !important;
+      .services-item {
+        width: calc(88% / 3);
+        margin: 0 auto !important;
+      }
+    }
+  }
+  .cooperation {
+    padding: 0 80px !important;
+  }
+  .get-started {
+    padding: 60px 80px 0 !important;
+  }
+  .footer {
+    padding: 80px 80px 15px;
+    .wrapper {
+      flex-direction: row !important;
+      justify-content: flex-end !important;
+    }
+  }
+}
+@media (min-width: 1024px) {
 }
