Fix scss styles & rename selectors

--- a/src/app/component/shopify/shopify.component.html
+++ b/src/app/component/shopify/shopify.component.html
@@ -11,16 +11,16 @@
     </div>
   </section>
   <section class="hero">
-    <div class="hero-container">
-      <h1 class="hero-title">Sell online with Shopify</h1>
-      <h2 class="hero-descr">Trusted by millions of businesses worldwide</h2>
-      <form action="" class="hero-form">
+    <div class="hero__container">
+      <h1 class="hero__title">Sell online with Shopify</h1>
+      <h2 class="hero__descr">Trusted by millions of businesses worldwide</h2>
+      <form action="" class="hero__form">
         <input
           type="text"
-          class="hero-email"
+          class="hero__form__email"
           placeholder="Enter your email address"
         />
-        <button class="hero-btn" type="submit">Start free trial</button>
+        <button class="hero__form__btn" type="submit">Start free trial</button>
       </form>
       <p class="form-descr">
         Try Shopify free for 14 days, no credit card required. By entering your
