--- a/src/app/component/shopify/shopify.component.html
+++ b/src/app/component/shopify/shopify.component.html
@@ -1,13 +1,11 @@
 <main class="main">
   <section class="header">
-    <div class="wrapper-logo">
-      <a href="#" class="logo-link">
-        <img
-          class="logo"
-          src="assets/img/logo/pngwing.com.png"
-          alt="Shopify Logo"
-        />
-      </a>
+    <div class="header__logo">
+      <img
+        class="header__logo__imagine"
+        src="assets/img/logo/pngwing.com.png"
+        alt="Shopify Logo"
+      />
     </div>
   </section>
   <section class="hero">
@@ -22,13 +20,13 @@
         />
         <button class="hero__form__btn" type="submit">Start free trial</button>
       </form>
-      <p class="form-descr">
+      <p class="hero__form__descr">
         Try Shopify free for 14 days, no credit card required. By entering your
         email, you agree to receive marketing emails from Shopify.
       </p>
-      <div class="wrapper-hero-image">
+      <div class="hero__background">
         <img
-          class="hero-image"
+          class="hero__background__imagine"
           src="https://cdn.shopify.com/shopifycloud/brochure/assets/landers/short-lander/free-trial/storefront-illustration@mobile-cd49a37e1e5e153e43ca57891bd3f327ff19f1fe139517ad4fbcf2d83388ae23.png"
           alt="Computer imagine"
         />
@@ -36,28 +34,30 @@
     </div>
   </section>
   <section class="services">
-    <div class="container">
-      <ul class="services-list">
-        <ng-container *ngFor="let servicesItem of servicesItems">
-          <li class="services-item">
-            <img
-              [src]="'assets/icon/service/' + servicesItem.icon"
-              [alt]="servicesItem.alt"
-            />
-            <h3 class="services-subtitle">{{ servicesItem.subtitle }}</h3>
-            <p class="services-descr">
-              {{ servicesItem.description }}
-            </p>
-          </li>
-        </ng-container>
-      </ul>
-    </div>
+    <ul class="services__list">
+      <ng-container *ngFor="let servicesItem of servicesItems">
+        <li class="services__list__item">
+          <img
+            class="services__list__item__imagine"
+            [src]="'assets/icon/service/' + servicesItem.icon"
+            [alt]="servicesItem.alt"
+          />
+          <h3 class="services__list__item__subtitle">
+            {{ servicesItem.subtitle }}
+          </h3>
+          <p class="services__list__item__descr">
+            {{ servicesItem.description }}
+          </p>
+        </li>
+      </ng-container>
+    </ul>
   </section>
   <section class="cooperation">
-    <div class="content">
+    <div class="cooperation__content">
       <ng-container *ngFor="let cooperationItem of cooperationLogosItems">
-        <div class="cooperation-logo-item">
+        <div class="cooperation__content__logo__item">
           <img
+            class="cooperation__content__logo__item__imagine"
             [src]="'assets/img/cooperationLogo/' + cooperationItem.source"
             [alt]="cooperationItem.alt"
           />
@@ -66,23 +66,25 @@
     </div>
   </section>
   <section class="get-started">
-    <div class="container">
-      <h3 class="get-started-quotes">
+    <div class="get-started__container">
+      <h3 class="get-started__container__quotes">
         “Shopify is better than any other platform we’ve played with, and we’ve
         played with them all.”
       </h3>
-      <h4 class="quotes-owner">JONATHON BAYME, CEO OF THEORY11</h4>
-      <button class="get-started-btn">Start free trial</button>
+      <h4 class="get-started__container__owner">
+        JONATHON BAYME, CEO OF THEORY11
+      </h4>
+      <button class="get-started__container__btn">Start free trial</button>
     </div>
   </section>
 </main>
 <footer class="footer">
-  <div class="wrapper">
-    <div class="footer-item">
-      <a href="#" class="footer-link">Terms of Service </a>
+  <div class="footer__list">
+    <div class="footer__list__item">
+      <a href="#" class="footer__list__item__link">Terms of Service </a>
     </div>
-    <div class="footer-item">
-      <a href="#" class="footer-link">Privacy Policy</a>
+    <div class="footer__list__item">
+      <a href="#" class="footer__list__item__link">Privacy Policy</a>
     </div>
   </div>
 </footer>
