--- a/src/app/component/shopify/shopify.component.scss
+++ b/src/app/component/shopify/shopify.component.scss
@@ -1,178 +1,174 @@
-.main {
-  .header {
-    position: absolute;
+.header {
+  position: absolute;
+  width: 100%;
+  top: 40px;
+  &__logo {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    &__imagine {
+      width: 120px;
+    }
+  }
+}
+.hero {
+  height: fit-content;
+  background-image: url(/assets/img/download.svg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: white;
+  padding: 120px 30px 0;
+
+  &__container {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  &__title {
+    font-size: 28px;
+    margin-bottom: 0px;
+  }
+  &__descr {
+    font-size: 22px;
+    font-weight: 500;
+  }
+  &__form {
     width: 100%;
-    top: 40px;
-    .wrapper-logo {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      .logo {
-        width: 120px;
-      }
-    }
-  }
-  .hero {
-    height: fit-content;
-    background-image: url(/assets/img/download.svg);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    color: white;
-    padding: 120px 30px 0;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 15px 4px;
 
-    .hero__container {
-      text-align: center;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      .hero__title {
-        font-size: 28px;
-        margin-bottom: 0px;
-      }
-      .hero__descr {
-        font-size: 22px;
-        font-weight: 500;
-      }
-      .hero__form {
-        width: 100%;
-        justify-content: center;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        padding: 15px 4px;
-
-        .hero__form__email {
-          width: 100%;
-          max-width: 500px;
-          box-sizing: border-box;
-          height: 52px;
-          border-radius: 4px;
-          margin: 0 0 5px 0;
-          border: 1px solid black;
-          font-size: 16px;
-          padding: 8px 10px;
-          outline: none;
-        }
-        .hero__form__btn {
-          width: 100%;
-          box-sizing: border-box;
-          height: 52px;
-          border-radius: 4px;
-          background: #212326;
-          border: 1px solid #212326;
-          color: white;
-          font-size: 18px;
-          &:hover {
-            background-color: #121314;
-            transition: 0.4s;
-          }
-        }
-      }
-      .form-descr {
-        padding: 5px 15px;
-        font-size: 11px;
-        font-weight: 300;
-      }
-      .wrapper-hero-image {
-        max-width: 310px;
-        margin-top: 60px;
-        .hero-image {
-          max-width: 100%;
-        }
+    &__email {
+      width: 100%;
+      max-width: 500px;
+      box-sizing: border-box;
+      height: 52px;
+      border-radius: 4px;
+      margin: 0 0 5px 0;
+      border: 1px solid black;
+      font-size: 16px;
+      padding: 8px 10px;
+      outline: none;
+    }
+    &__btn {
+      width: 100%;
+      box-sizing: border-box;
+      height: 52px;
+      border-radius: 4px;
+      background: #212326;
+      border: 1px solid #212326;
+      color: white;
+      font-size: 18px;
+      &:hover {
+        background-color: #121314;
+        transition: 0.4s;
       }
     }
   }
-  .services {
-    padding: 0 30px 80px;
-    .container {
-      .services-list {
-        display: flex;
-        flex-direction: column;
-        list-style: none;
-        padding: 0;
-        .services-item {
-          margin-top: 45px;
-          img {
-            width: 65px;
-            color: #008060;
-          }
-          .services-subtitle {
-            font-size: 16px;
-          }
-          .services-descr {
-            color: #6b7177;
-            font-size: 15px;
-            font-weight: 400;
-            line-height: 26px;
-          }
-        }
-      }
+  &__form__descr {
+    padding: 5px 15px;
+    font-size: 11px;
+    font-weight: 300;
+  }
+  &__background {
+    max-width: 310px;
+    margin-top: 60px;
+    &__imagine {
+      max-width: 100%;
     }
   }
-  .cooperation {
-    padding: 0 20px;
-    .content {
-      display: flex;
-      flex-wrap: wrap;
-      flex-direction: row;
-      justify-content: space-around;
-      height: fit-content;
-      border-top: 1px solid #6b7177;
-      border-bottom: 1px solid #6b7177;
-      padding: 30px 0;
-      .cooperation-logo-item {
-        width: 115px;
-        margin: 7px 10px;
-        img {
-          width: 100%;
-        }
+}
+.services {
+  padding: 0 30px 80px;
+  &__list {
+    display: flex;
+    flex-direction: column;
+    list-style: none;
+    padding: 0;
+    &__item {
+      margin-top: 45px;
+      &__imagine {
+        width: 65px;
+        color: #008060;
       }
-    }
-  }
-  .get-started {
-    padding: 60px 30px 0;
-    .container {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      text-align: center;
-      .get-started-quotes {
-        font-weight: 300;
+      &__subtitle {
+        font-size: 16px;
       }
-      .quotes-owner {
-        font-size: 13px;
-        margin: 0;
-        padding: 10px 20px 60px;
-        color: #42474c;
-      }
-      .get-started-btn {
-        width: 163px;
-        height: 52px;
-        color: white;
-        background-color: #008060;
-        border-radius: 4px;
-        border: none;
-        font-size: 18px;
-        &:hover {
-          transition: 0.4s;
-          background-color: #02634a;
-          box-shadow: 0 0 6px 6px #d4e9e442;
-        }
+      &__descr {
+        color: #6b7177;
+        font-size: 15px;
+        font-weight: 400;
+        line-height: 26px;
       }
     }
   }
 }
-.footer {
-  padding: 80px 30px 15px;
-  .wrapper {
+.cooperation {
+  padding: 0 20px;
+  &__content {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-around;
+    height: fit-content;
+    border-top: 1px solid #6b7177;
+    border-bottom: 1px solid #6b7177;
+    padding: 30px 0;
+    &__logo__item {
+      width: 115px;
+      margin: 7px 10px;
+      &__imagine {
+        width: 100%;
+      }
+    }
+  }
+}
+.get-started {
+  padding: 60px 30px 0;
+  &__container {
     display: flex;
     flex-direction: column;
     align-items: center;
-    .footer-item {
-      padding: 8px;
+    text-align: center;
+    &__quotes {
+      font-weight: 300;
+    }
+    &__owner {
+      font-size: 13px;
+      margin: 0;
+      padding: 10px 20px 60px;
+      color: #42474c;
+    }
+    &__btn {
+      width: 163px;
+      height: 52px;
+      color: white;
+      background-color: #008060;
+      border-radius: 4px;
+      border: none;
+      font-size: 18px;
+      &:hover {
+        transition: 0.4s;
+        background-color: #02634a;
+        box-shadow: 0 0 6px 6px #d4e9e442;
+      }
+    }
+  }
+}
 
-      .footer-link {
+.footer {
+  padding: 80px 30px 15px;
+  &__list {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    &__item {
+      padding: 8px;
+      &__link {
         text-decoration: none;
         color: #008060;
       }
@@ -180,75 +176,67 @@
   }
 }
 @media (min-width: 490px) {
-  .main {
-    .hero {
-      .hero__container {
-        .hero__form {
-          flex-direction: row;
-          .hero__form__email {
-            width: 70%;
-            margin: 0 8px 8px;
-          }
-          .hero__form__btn {
-            width: 145px;
-            margin: 0 8px 8px;
-          }
-        }
+  .hero {
+    &__form {
+      flex-direction: row;
+      &__email {
+        width: 70%;
+        margin: 0 8px 8px;
+      }
+      &__btn {
+        width: 145px;
+        margin: 0 8px 8px;
       }
     }
   }
 }
 @media (min-width: 768px) {
-  .main {
-    .header {
-      .wrapper-logo {
-        .logo {
-          width: 150px;
-        }
+  .header {
+    &__logo {
+      &__imagine {
+        width: 150px;
       }
     }
+  }
 
-    .hero {
-      padding: 150px 140px 70px;
-      .hero__container {
-        .hero__title {
-          font-size: 35px;
-        }
-        .hero__descr {
-          font-size: 28px;
-        }
-        .hero__form {
-          padding: 10px 100px;
-        }
-        .form__descr {
-          font-size: 14px;
-        }
+  .hero {
+    padding: 150px 140px 70px;
+    &__container {
+      &__title {
+        font-size: 35px;
+      }
+      &__descr {
+        font-size: 28px;
+      }
+      &__form {
+        padding: 10px 100px;
+      }
+      &__form__descr {
+        font-size: 14px;
       }
     }
-    .services {
-      padding: 0 100px 80px;
-      .container {
-        .services-list {
-          flex-direction: row;
-          flex-wrap: wrap;
-          margin: 0;
-          .services-item {
-            width: calc(88% / 3);
-            margin: 0 auto;
-          }
-        }
+  }
+  .services {
+    padding: 0 100px 80px;
+    &__list {
+      flex-direction: row;
+      flex-wrap: wrap;
+      margin: 0;
+      &__item {
+        width: calc(88% / 3);
+        margin: 0 auto;
       }
     }
-    .cooperation {
-      padding: 0 80px;
-    }
-    .get-started {
-      padding: 60px 80px 0;
-    }
+  }
+  .cooperation {
+    padding: 0 80px;
+  }
+  .get-started {
+    padding: 60px 80px 0;
   }
   .footer {
     padding: 80px 80px 15px;
-    .wrapper {
+    &__list {
       flex-direction: row;
       justify-content: flex-end;
     }
